--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# all log level setting (default info)
+logging.level.root=info
 
+# hello.spingmvc package and under log level setting
+logging.level.hello.springmvc=debug
